--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "watch": "ng build --watch --configuration development",
         "build:prod": "ng build --configuration production --base-href https://abdoulaadim.github.io/smarthousefront/",
         "test": "ng test",
-        "heroku-postbuild": "ng build --prod"
+        "heroku-postbuild": "ng build --prod",
+        "test:headless": "ng test --watch=false --browsers=ChromeHeadless"
     },
     "private": true,
     "dependencies": {
