--- a/package.json
+++ b/package.json
@@ -3,20 +3,20 @@
     "version": "0.0.0",
     "scripts": {
         "ng": "ng",
-        "start": "node server.js",
+        "start": "ng serve",
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
-        "build:prod": "ng build --configuration production",
         "test": "ng test",
-        "heroku-postbuild": "ng build --prod"
+        "lint": "ng lint",
+        "e2e": "ng e2e",
+        "docker": "docker build -t ng-smarthouse .",
+        "ng-smarthouse": "docker run -p 4200:80 ng-smarthouse"
     },
     "private": true,
     "dependencies": {
         "@angular/animations": "~13.3.0",
-        "@angular/cli": "~13.3.0",
         "@angular/common": "~13.3.0",
         "@angular/compiler": "~13.3.0",
-        "@angular/compiler-cli": "~13.3.0",
         "@angular/core": "~13.3.0",
         "@angular/forms": "~13.3.0",
         "@angular/platform-browser": "~13.3.0",
@@ -24,15 +24,12 @@
         "@angular/router": "~13.3.0",
         "@sweetalert2/ngx-sweetalert2": "^11.0.0",
         "bootstrap": "^5.1.3",
-        "ci": "^2.1.1",
-        "express": "^4.17.3",
         "flash-messages-angular": "^4.0.1",
         "font-awesome": "^4.7.0",
         "rxjs": "^6.6.7",
         "rxjs-compat": "^6.6.7",
         "sweetalert2": "^11.4.8",
         "tslib": "^2.3.0",
-        "typescript": "~4.6.2",
         "zone.js": "~0.11.4"
     },
     "devDependencies": {
@@ -41,7 +38,6 @@
         "@angular/compiler-cli": "~13.3.0",
         "@types/jasmine": "~3.10.0",
         "@types/node": "^12.11.1",
-        "enhanced-resolve": "^3.3.0",
         "jasmine-core": "~4.0.0",
         "karma": "~6.3.0",
         "karma-chrome-launcher": "~3.1.0",
@@ -49,9 +45,5 @@
         "karma-jasmine": "~4.0.0",
         "karma-jasmine-html-reporter": "~1.7.0",
         "typescript": "~4.6.2"
-    },
-    "engines": {
-        "node": "16.13.1",
-        "npm": "8.1.2"
     }
 }
