--- a/package.json
+++ b/package.json
@@ -6,11 +6,7 @@
         "start": "ng serve",
         "build": "ng build",
         "watch": "ng build --watch --configuration development",
-        "test": "ng test",
-        "lint": "ng lint",
-        "e2e": "ng e2e",
-        "docker": "docker build -t ng-smarthouse .",
-        "ng-smarthouse": "docker run -p 4200:80 ng-smarthouse"
+        "test": "ng test"
     },
     "private": true,
     "dependencies": {
