--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
     #   run: npm run test:headless
 
     - name: Build
-      run: npm run build:prod
+      run: npm run build --if-present
 
     # - uses: mr-smithers-excellent/docker-build-push@v5
     #   name: Build & push Docker image
